--- a/css/responsive-carousel.css
+++ b/css/responsive-carousel.css
@@ -66,6 +66,55 @@ img {
   left: 100%;
 }
 
+@media (min-width: 767px) {
+  .carousel > ul > li {
+      margin: 0 2.5% 20px;
+      width: 8.5%;
+  }
+  .carousel {
+      height: 420px;
+  }
+}
+
+@media (max-width: 766px) {
+  .carousel > ul > li {
+      margin: 0 7% 23px 0;
+      width: 12%;
+  }
+
+  .carousel {
+      height: 320px;
+  }
+}
+
+@media (max-width: 680px) {
+  .carousel {
+      height: 290px;
+  }
+}
+
+@media (max-width: 580px) {
+  .carousel {
+      height: 270px;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel > ul > li {
+      margin: 0 9% 23px 0;
+      width: 15%;
+  }
+
+  .carousel {
+      height: 310px;
+  }
+}
+
+@media (max-width: 400px) {
+  .carousel {
+      height: 280px;
+  }
+}
 
 .container > nav {
   display: inline-block;
