--- a/stylesheets/responsive-style.sass
+++ b/stylesheets/responsive-style.sass
@@ -1,1 +1,58 @@
 @import reset
+
+.header
+  width: 40%
+  margin: 20px auto 0px
+
+
+.container
+  margin: 0 auto
+  text-align: center
+  max-width: 903px
+
+
+.carousel
+  position: relative
+  padding: 20px 0 0 15px
+  // overflow: hidden
+
+
+.carousel
+  ul
+    position: absolute
+    left: -100%
+    width: 100%
+    transition: left 300ms linear
+    z-index: 1
+    li
+      display: inline-block
+      vertical-align: middle
+      text-align: center
+
+  ul.active
+    left: 0
+    z-index: 3
+
+  ul.active ~ ul
+    left: 100%
+
+
+.container
+  nav
+    display: inline-block
+    span
+      float: left
+      margin: 10px 5px
+      height: 12px
+      width: 12px
+      border-radius: 50%
+      border: 1px solid #929292
+      cursor: pointer
+
+    span.current
+      div
+        margin: 4px auto
+        height: 4px
+        width: 4px
+        border-radius: 50%
+        background: #126BC5
