--- a/stylesheets/responsive-style.sass
+++ b/stylesheets/responsive-style.sass
@@ -1,7 +1,9 @@
 @import reset
 
+$nav-filler-color: #126BC5
+
 .header
-  width: 40%
+  width: 30%
   margin: 20px auto 0px
 
 
@@ -55,7 +57,8 @@
         height: 4px
         width: 4px
         border-radius: 50%
-        background: #126BC5
+        background: $nav-filler-color
+
 
 @media (min-width: 767px)
   .carousel
