--- a/stylesheets/responsive-style.sass
+++ b/stylesheets/responsive-style.sass
@@ -1,4 +1,5 @@
 @import reset
+@import media
 
 $nav-filler-color: #126BC5
 
@@ -72,37 +73,3 @@ $nav-filler-color: #126BC5
         width: 4px
         +border-radius(50%)
         background: $nav-filler-color
-
-
-@media (min-width: 767px)
-  .carousel
-    > ul > li
-      margin: 0 2.5% 20px
-      width: 8.5%
-    height: 420px
-
-@media (max-width: 766px)
-  .carousel
-    > ul > li
-      margin: 0 7% 23px 0
-      width: 12%
-    height: 320px
-
-@media (max-width: 680px)
-  .carousel
-    height: 290px
-
-@media (max-width: 580px)
-  .carousel
-    height: 270px
-
-@media (max-width: 480px)
-  .carousel
-    > ul > li
-      margin: 0 9% 23px 0
-      width: 15%
-    height: 310px
-
-@media (max-width: 400px)
-  .carousel
-    height: 280px
